build: update packaging layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,13 +52,15 @@ foreach(Project IN ITEMS Headers Loader Tools ValidationLayers Emulation)
         GIT_SHALLOW            ${Project_SHALLOW_ARG}
         CMAKE_CACHE_ARGS       "${Common_CACHE_ARGS};${${Project}_CACHE_ARGS}"
     )
-    install(DIRECTORY "${PROJECT_BINARY_DIR}/${VKSC_SDK_EP_BASE}/Install/VulkanSC-${Project}/" DESTINATION "." USE_SOURCE_PERMISSIONS)
+    install(DIRECTORY "${PROJECT_BINARY_DIR}/${VKSC_SDK_EP_BASE}/Install/VulkanSC-${Project}/" DESTINATION "${PROJECT_VERSION}" USE_SOURCE_PERMISSIONS)
 endforeach()
+install(DIRECTORY "${PROJECT_SOURCE_DIR}/extras/" DESTINATION "${PROJECT_VERSION}")
 
 set(CPACK_SOURCE_INSTALLED_DIRECTORIES "${PROJECT_BINARY_DIR}/${VKSC_SDK_EP_BASE}/Source/;.")
 set(CPACK_SOURCE_IGNORE_FILES [[\\.git/;/external/]])
 set(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}-Source")
 set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
+set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 
 # Must be included AFTER all CPACK_... variables are set
 include(CPack)
